--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-core": "^6.23.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "live-server": "^1.2.0",
+    "react-tap-event-plugin": "^2.0.1",
     "webpack": "^2.2.1"
   },
   "keywords": [
