--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "start": "node app.js",
     "build": "webpack"
   },
-  "dependencies": {
-    "material-ui": "^0.17.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.23.1",
