--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "start": "node app.js",
     "build": "webpack"
   },
-  "dependencies": {},
+  "peerDependencies": {
+    "material-ui": "^0.17.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-tap-event-plugin": "^2.0.0"
+  },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.23.1",
