--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "peerDependencies": {
     "material-ui": "^0.17.0",
+    "prop-types": "^15.5.10",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-tap-event-plugin": "^2.0.0"
