--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "peerDependencies": {
     "material-ui": "^0.17.0",
-    "prop-types": "^15.5.10",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-tap-event-plugin": "^2.0.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.5.10"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
